# retia-engine

./: .gitignore  README.md  Requirements.txt  main.py  manage.py  pyproject.toml  pyvenv.cfg
.github/workflows/: build.yml
retia_api/: README.md  admin.py  apps.py  asgi.py  elasticclient.py  logging.py  models.py  nescient.py  operation.py  scheduler.py  serializers.py  settings.py  urls.py  utils.py  views.py
retia_api/configurations/: administrators.py  scheduler.py  settings.py  urls.py  views.py
retia_api/deployments/: asgi.py  wsgi.py
retia_api/helpers/: elasticclient.py  logging.py  operation.py  serializers.py
retia_api/migrations/: 0001_initial.py  0002_alter_activitylog_instance.py  0002_detector_created_at_detector_modified_at.py  0003_alter_activitylog_instance.py  0023_device_brand_device_device_type.py
src/retia_api/: admin.py  apps.py  asgi.py  logging.py  nescient.py  operation.py  scheduler.py  settings.py  urls.py  views.py  wsgi.py
tests/: test_activity_logs.py  test_detector.py  test_device.py
