[tool.poetry]
name = "retia-engine"
version = "0.1"
description = "Engine for Retia Platform"
authors = ["Ezra Lazuardy <ezralazuardy@icloud.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
netifaces = "^0.11.0"
tzlocal = "^5.2"
djangorestframework-simplejwt = "^5.3.1"
djangorestframework = "^3.15.1"
apscheduler = "^3.10.4"
requests = "^2.31.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
elasticsearch = "^8.13.0"
icecream = "^2.1.3"
pyyaml = "^6.0.1"
pylint = "^3.1.0"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
