[project]
name = "retia-engine"
version = "0.1"
description = "Default template for PDM package"
authors = [
    {name = "Ezra Lazuardy", email = "ezralazuardy@icloud.com"},
]
dependencies = [
    "django>=5.0.4",
    "netifaces>=0.11.0",
    "djangorestframework-simplejwt>=5.3.1",
    "djangorestframework>=3.15.1",
    "apscheduler>=3.10.4",
    "requests>=2.31.0",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "elasticsearch>=8.13.0",
    "icecream>=2.1.3",
    "pyyaml>=6.0.1",
    "pylint>=3.1.0",
    "pytest>=8.1.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false


[tool.pdm.scripts]
start = "python manage.py runserver"
migrate = "python manage.py migrate retia_api"
show-migration = "python manage.py showmigrations retia_api"
make-migration = "python manage.py makemigrations retia_api"
create-superuser = "python manage.py createsuperuser"
reset-database = "rm -rf src/databases/db.sqlite3"
